Fix layout issues on iOS safari and add terms and conditions

--- a/style.css
+++ b/style.css
@@ -319,6 +319,7 @@ i{
   .business-request-btn {
     padding: 10px 20px;
     margin-top: 20px;
+    margin-bottom: 30px;
     background-color: #333;
     color: #fff;
     border: none;
